@@ -1,0 +1,10 @@
+#!/bin/sh
+
+MAUDE_LIB=$srcdir/../../src/Main
+export MAUDE_LIB
+
+../../src/Main/maude \
+  < $srcdir/fragmentBufferJune2025.maude -no-banner -no-advise \
+  > fragmentBufferJune2025.out 2>&1
+
+diff $srcdir/fragmentBufferJune2025.expected fragmentBufferJune2025.out > /dev/null 2>&1
